--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,8 @@
     <description>wallet</description>
     <properties>
         <java.version>19</java.version>
+        <spring-cloud.version>2022.0.2</spring-cloud.version>
     </properties>
-
-
     <dependencies>
 
         <dependency>
@@ -59,13 +58,6 @@
 
 
         <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-
-        </dependency>
-
-
-        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
@@ -99,9 +91,23 @@
             <artifactId>amqp-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
     </dependencies>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
