--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jackson.time-zone=Asia/Tehran
 
 spring.data.mongodb.uri=mongodb://localhost:27017/walletlog
 
-
+auth.url =localhost:8083/api/token/is-valid
 
