add separate Request and some fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jackson.time-zone=Asia/Tehran
 
 spring.data.mongodb.uri=mongodb://localhost:27017/walletlog
 
-auth.url =localhost:8083/api/token/is-valid
+url.auth =localhost:80
+url.bank =localhost:8081
 
-
+app.test=false
