--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=sa
 spring.jpa.defer-datasource-initialization=true
 
 
+
+url.auth =localhost:80
+url.bank =localhost:8081
+
+app.test=true
