change controllers and fix bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.kafka.bootstrap-servers=192.168.43.12:9092
 #spring.kafka.consumer.auto-offset-reset=earliest
 
 app.test=false
+rabbit.server=192.168.200.102
