--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/walletlog
 
 url.auth =192.168.43.12:8081
 url.bank =localhost:8081
-spring.kafka.bootstrap-servers=192.168.43.12:9092
-
-#spring.kafka.listener.poll-timeout=12000000
-#spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
-#spring.kafka.consumer.enable-auto-commit=false
-#spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.bootstrap-servers=192.168.43.12:9092#spring.kafka.listener.poll-timeout=12000000
 
 app.test=false
 rabbit.server=192.168.200.102
