fix test with new version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,13 @@ spring.data.mongodb.uri=mongodb://localhost:27017/walletlog
 
 url.auth =192.168.43.12:8081
 url.bank =localhost:8081
-spring.kafka.bootstrap-servers=192.168.43.12:9092#spring.kafka.listener.poll-timeout=12000000
+
+
 
 app.test=false
+
+
 rabbit.server=192.168.200.102
+#rabbit.queue=wallet_queue
+#rabbit.exchange=wallet_exchange
+#rabbit.routingKey=wallet_routingKey
